Memory state viewer UI improved, minor bug fixes

--- a/Brainf_ck-sharp.UWP/UserControls/Flyouts/MemoryViewerFlyout.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Flyouts/MemoryViewerFlyout.xaml
@@ -13,8 +13,7 @@
     <!--Memory cells list-->
     <ListView ItemContainerStyle="{StaticResource ListViewItemWithoutPointerVisualStates}"
               ItemsSource="{x:Bind Source, Mode=OneWay}"
-              CanDrag="False"
-              Margin="12,0,0,0">
+              CanDrag="False">
         <ListView.Header>
             <Grid Height="12"/>
         </ListView.Header>
