--- a/Brainf_ck-sharp.UWP/UserControls/Shell.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Shell.xaml
@@ -11,6 +11,8 @@
     xmlns:views="using:Brainf_ck_sharp_UWP.Views"
     xmlns:customCommandBar="using:Brainf_ck_sharp_UWP.UserControls.CustomCommandBar"
     xmlns:stdinHeader="using:Brainf_ck_sharp_UWP.UserControls.VirtualKeyboard.StdinHeader"
+    xmlns:telerik="using:Telerik.UI.Xaml.Controls.Primitives"
+    xmlns:inheritedControls="using:Brainf_ck_sharp_UWP.UserControls.InheritedControls"
     mc:Ignorable="d"
     d:DesignHeight="600"
     d:DesignWidth="400">
@@ -95,44 +97,65 @@
             RelativePanel.Above="SharedCommandBar"
             RelativePanel.AlignLeftWithPanel="True"
             RelativePanel.AlignRightWithPanel="True">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="48"/>
-                <RowDefinition Height="180"/>
-            </Grid.RowDefinitions>
 
             <!--CompositionBorder-->
             <xaml:CanvasControl x:Name="KeyboardCanvas"/>
-            <Border 
-                x:Name="KeyboardBorder"
-                Grid.Row="0"
-                Grid.RowSpan="2"/>
+            <Border x:Name="KeyboardBorder"/>
             
-            <!--Header-->
-            <Canvas 
-                Grid.Row="0"
-                Background="#40000000"/>
-            <stdinHeader:KeyboardHeaderControl 
-                Grid.Row="0"
-                SelectedHeaderIndex="{x:Bind CommandsPivot.SelectedIndex, Mode=TwoWay}"/>
-            
-            <!--Keyboard pivot-->
-            <Pivot 
-                Grid.Row="1"
-                Style="{StaticResource PivotCustomStyle}"
-                x:Name="CommandsPivot">
+            <!--Expandable keyboard pivot-->
+            <inheritedControls:FixedRadExpanderControl
+                Margin="0"
+                IsExpandable="True"
+                IsExpanded="True"
+                ExpanderHitTargetAreaWidth="48">
+                <telerik:RadExpanderControl.AnimatedIndicatorContentTemplate>
+                    <DataTemplate>
+                        <Button 
+                            Style="{StaticResource WideButtonWithNoBackgroundAndBorderStyle}"
+                            Width="48">
+                            <Button.Clip>
+                                <RectangleGeometry Rect="0,0,48,48"/>
+                            </Button.Clip>
+                            <TextBlock 
+                                Text="{Binding}"
+                                Style="{StaticResource FontIconTextBlockStyle}"
+                                VerticalAlignment="Center"
+                                HorizontalAlignment="Center"/>
+                        </Button>
+                    </DataTemplate>
+                </telerik:RadExpanderControl.AnimatedIndicatorContentTemplate>
+                <telerik:RadExpanderControl.Content>
 
-                <!--Keyboard UI-->
-                <PivotItem Margin="0">
-                    <virtualKeyboard:VirtualKeyboardControl/>
-                </PivotItem>
-                
-                <!--Memory view-->
-                <PivotItem 
-                    Margin="0"
-                    Background="#36000000">
-                    
-                </PivotItem>
-            </Pivot>
+                    <!--Header-->
+                    <Grid Height="48">
+                        <Canvas 
+                            Grid.Row="0"
+                            Background="#40000000"/>
+                        <stdinHeader:KeyboardHeaderControl 
+                            Grid.Row="0"
+                            SelectedHeaderIndex="{x:Bind CommandsPivot.SelectedIndex, Mode=TwoWay}"/>
+                    </Grid>
+                </telerik:RadExpanderControl.Content>
+                <telerik:RadExpanderControl.ExpandableContent>
+                    <Pivot
+                        Style="{StaticResource PivotCustomStyle}"
+                        x:Name="CommandsPivot"
+                        Height="180">
+
+                        <!--Keyboard UI-->
+                        <PivotItem Margin="0">
+                            <virtualKeyboard:VirtualKeyboardControl/>
+                        </PivotItem>
+
+                        <!--Memory view-->
+                        <PivotItem 
+                            Margin="0"
+                            Background="#36000000">
+
+                        </PivotItem>
+                    </Pivot>
+                </telerik:RadExpanderControl.ExpandableContent>
+            </inheritedControls:FixedRadExpanderControl>
         </Grid>
 
         <!--Command bar-->
