--- a/Brainf_ck-sharp.UWP/UserControls/VirtualKeyboard/StdinHeader/KeyboardSectionHeaderButton.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/VirtualKeyboard/StdinHeader/KeyboardSectionHeaderButton.xaml
@@ -45,6 +45,7 @@
             </VisualStateGroup>
         </VisualStateManager.VisualStateGroups>
 
+        <!--Root-->
         <Grid x:Name="RootGrid">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
