--- a/Brainf_ck-sharp.UWP/UserControls/BottomEdgeInfoBar.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/BottomEdgeInfoBar.xaml
@@ -18,6 +18,7 @@
             <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="Auto"
                               MaxWidth="140"/>
         </Grid.ColumnDefinitions>
@@ -89,7 +90,7 @@
                     <VisualState.Setters>
                         <Setter 
                             Target="RootGrid.Background"
-                            Value="#FFA00000"/>
+                            Value="#FFA04A09"/>
                         <Setter
                             Target="RowBlock.Visibility"
                             Value="Visible"/>
@@ -99,6 +100,9 @@
                         <Setter
                             Target="CharBlock.Visibility"
                             Value="Collapsed"/>
+                        <Setter
+                            Target="IDEErrorBlock.Visibility"
+                            Value="Visible"/>
                         <Setter
                             Target="FileGrid.Visibility"
                             Value="Visible"/>
@@ -135,13 +139,30 @@
                 x:Name="ErrorRun"/>
         </TextBlock>
 
+        <!--IDE error position-->
+        <TextBlock 
+            x:Name="IDEErrorBlock"
+            Visibility="Collapsed"
+            Foreground="White"
+            Margin="16,0,0,0"
+            FontSize="12"
+            VerticalAlignment="Center"
+            IsTextScaleFactorEnabled="False"
+            FontWeight="SemiLight"
+            Grid.Column="2">
+            <Run Text="Error"/>
+            <Run 
+                Text="12"
+                x:Name="IDEErrorRun"/>
+        </TextBlock>
+
         <!--Row-->
         <TextBlock Foreground="White"
                    Margin="16,0,0,0"
                    FontSize="12"
                    VerticalAlignment="Center"
                    IsTextScaleFactorEnabled="False"
-                   Grid.Column="2"
+                   Grid.Column="3"
                    FontWeight="SemiLight"
                    x:Name="RowBlock"
                    Visibility="Collapsed">
@@ -160,7 +181,7 @@
             VerticalAlignment="Center"
             IsTextScaleFactorEnabled="False"
             FontWeight="SemiLight"
-            Grid.Column="3"
+            Grid.Column="4"
             Visibility="Collapsed">
             <Run Text="Col"/>
             <Run 
@@ -177,7 +198,7 @@
             VerticalAlignment="Center"
             IsTextScaleFactorEnabled="False"
             FontWeight="SemiLight"
-            Grid.Column="3">
+            Grid.Column="4">
             <Run Text="Char"/>
             <Run 
                 Text="0"
@@ -188,7 +209,7 @@
         <Grid 
             x:Name="FileGrid"
             Visibility="Collapsed"
-            Grid.Column="4"
+            Grid.Column="5"
             Margin="16,0,8,0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
