--- a/Brainf_ck-sharp.UWP/Views/IDEView.xaml
+++ b/Brainf_ck-sharp.UWP/Views/IDEView.xaml
@@ -45,6 +45,7 @@
             TextWrapping="NoWrap"
             IsSpellCheckEnabled="False"
             IsTextPredictionEnabled="False"
+            ClipboardCopyFormat="PlainText"
             TextChanged="EditBox_OnTextChanged"
             SelectionChanged="EditBox_OnSelectionChanged"
             Margin="0"
