--- a/Brainf_ck-sharp.UWP/UserControls/DataTemplates/IDEResultHeaders/IDEResultZoomedOutHeaderTemplate.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/DataTemplates/IDEResultHeaders/IDEResultZoomedOutHeaderTemplate.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="Brainf_ck_sharp_UWP.UserControls.DataTemplates.IDEResultZoomedOutHeaderTemplate"
+    x:Class="Brainf_ck_sharp_UWP.UserControls.DataTemplates.IDEResultHeaders.IDEResultZoomedOutHeaderTemplate"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -12,6 +12,28 @@
     <!--Root-->
     <Grid x:Name="RootGrid"
           Background="#24000000">
+
+        <!--Visual states-->
+        <VisualStateManager.VisualStateGroups>
+            <VisualStateGroup>
+                <VisualState x:Name="Default">
+                    <VisualState.Setters>
+                        <Setter 
+                            Target="RootGrid.Background"
+                            Value="#24000000"/>
+                    </VisualState.Setters>
+                </VisualState>
+                <VisualState x:Name="Highlight">
+                    <VisualState.Setters>
+                        <Setter 
+                            Target="RootGrid.Background"
+                            Value="#05FFFFFF"/>
+                    </VisualState.Setters>
+                </VisualState>
+            </VisualStateGroup>
+        </VisualStateManager.VisualStateGroups>
+        
+        <!--Content-->
         <StackPanel VerticalAlignment="Center"
                     Margin="16,4,16,0">
 
