Fixed keyboard expander icon

--- a/Brainf_ck-sharp.UWP/UserControls/Shell.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Shell.xaml
@@ -109,7 +109,8 @@
                 Margin="0"
                 IsExpandable="True"
                 IsExpanded="True"
-                ExpanderHitTargetAreaWidth="48">
+                ExpanderHitTargetAreaWidth="48"
+                AnimatedIndicatorContent="&#xE010;">
                 <telerik:RadExpanderControl.AnimatedIndicatorContentTemplate>
                     <DataTemplate>
                         <Button 
